clusters/talos-pve/apps/downloader/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: downloader
  labels:
    pod-security.kubernetes.io/enforce: privileged
