clusters/talos-pve/apps/downloader/jdownloader.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jdownloader-ingress
  namespace: downloader
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  tls:
    - hosts:
        - jdownloader.k8s.exmaple.com
  rules:
    - host: jdownloader.k8s.exmaple.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jdownloader2-web
                port:
                  number: 5800
